# studio-blender

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev-install-notes.md  dev-install-windows.bat  pyproject.toml  requirements.txt  tbump.toml  tox.ini
.github/workflows/: build.yml
addons/: io_export_skybrush.py  io_import_skybrush.py
assets/icons/: README.md
assets/icons/mac/: skybrush.icns
assets/icons/win/: icon.rc
doc/: antora.yml  book.cfg  dev-install-notes.md
doc/modules/ROOT/: book.adoc  nav.adoc
doc/modules/ROOT/pages/: concepts.adoc  features.adoc  glossary.adoc  hardware.adoc  index.adoc  install.adoc  operators.adoc  overview.adoc  panels.adoc  setup.adoc
doc/modules/ROOT/pages/appendix/: glossary.adoc  index.adoc  third_party.adoc
doc/modules/ROOT/pages/panels/: formations.adoc  index.adoc  leds.adoc  pyro.adoc  safety_and_export.adoc  safety_export.adoc  skybrush.adoc
doc/modules/ROOT/pages/tutorials/: easy-drone-show-design.adoc  index.adoc
doc/scripts/: ServerRequest.py  formation_mapping.py  light_json_to_code.py
doc/test_scripts/: formation_mapping.py  light_example.txt
etc/scripts/: _append_to_bootloader.py  _build_macos_dmg.sh  _build_macos_launcher.sh  _strip_comments.py  append_to_bootloader.py  bootstrap.sh  bootstrap_windows.bat  create_blender_dist.sh  dev-install-windows.bat  render_light_effect_preset_gifs.py  sort_translations.py  strip_comments.py
modules/: blender_helpers.py  skybrush_classes.py  skybrush_converter.py  skybrush_utils.py
src/addons/: io_export_skybrush.py  io_export_skybrush_csv.py  io_export_skybrush_legacy.py  io_import_skybrush.py  io_import_skybrush_all.py  io_import_skybrush_sky.py  ui_skybrush_studio.py
src/modules/sbstudio/: errors.py  utils.py  viewer_bridge.py
src/modules/sbstudio/api/: __init__.py  base.py  constants.py  enums.py  errors.py  gateway.py  signer.py  studio.py  types.py  version.py
src/modules/sbstudio/api/operations/: base.py  export.py  match_points.py
src/modules/sbstudio/i18n/: translations.py
src/modules/sbstudio/math/: colors.py  formation_mapping.py  line_segments.py  nearest_neighbors.py  rng.py
src/modules/sbstudio/model/: audio.py  cameras.py  color.py  file_formats.py  light_program.py  location.py  plane.py  point.py  point_cloud.py  pyro_markers.py  safety_check.py  tethers.py  time_markers.py  trajectory.py  types.py  version.py  yaw.py
src/modules/sbstudio/plugin/: actions.py  api.py  blender_helpers.py  colors.py  constants.py  errors.py  formation.py  gateway.py  global_state.py  keyframes.py  materials.py  meshes.py  objects.py  plugin_helpers.py  selection.py  signer.py  state.py  stats.py  transition.py  views.py
src/modules/sbstudio/plugin/callbacks/: __init__.py  base.py  leds.py  light_effects.py
src/modules/sbstudio/plugin/headers/: __init__.py  clearance_indicator.py
src/modules/sbstudio/plugin/light_fx_presets/: __init__.py
src/modules/sbstudio/plugin/lists/: __init__.py  drone_groups.py  light_effects.py  schedule_overrides.py
src/modules/sbstudio/plugin/menus/: __init__.py  generate_formation.py  generate_markers.py
src/modules/sbstudio/plugin/migrations/: __init__.py  base.py  (+1 more)
src/modules/scipy-1.9.1.dist-info/: RECORD
test/: test_math_colors.py  test_model_plane.py  test_rng_random_sequence.py
tests/: test_matcher.py
typings/: bgl.pyi  blf.pyi
typings/bmesh/: __init__.pyi  ops.pyi  types.pyi
typings/bpy/: __init__.pyi  ops.pyi  path.pyi  props.pyi  types.pyi  utils.pyi
typings/bpy/app/: __init__.pyi  handlers.pyi  timers.pyi  translations.pyi
typings/bpy_extras/: io_utils.pyi  view3d_utils.pyi
typings/gpu/: __init__.py  state.pyi  types.pyi
typings/gpu_extras/: batch.pyi
typings/mathutils/: __init__.pyi  bvhtree.pyi
(+185 files in other folders)
