[tool.poetry]
name = "skybrush-studio-for-blender"
version = "3.5.0"
description = "Skybrush Studio for Blender is a professional drone show designer framework integrated into Blender"
license = "GPL-3.0-or-later"
authors = ["CollMot Robotics Ltd. <hello@skybrush.io>"]
maintainers = [
    "Tamas Nepusz <tamas@collmot.com>",
    "Gabor Vasarhelyi <vasarhelyi@collmot.com>",
]
homepage = "https://skybrush.io"
repository = "https://github.com/skybrush-io/studio-plugin-blender"
documentation = "https://doc.collmot.com/public/skybrush-plugin-blender/latest/"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
natsort = "^8.0.0"
skybrush-studio = { version = "^4.10.1", optional = true, source = "collmot" }
svgpathtools = { version = "^1.6.1", optional = true, source = "fury" }

[tool.poetry.extras]
standalone = ["skybrush-studio", "svgpathtools"]

[tool.poetry.group.dev.dependencies]
pyclean = "^2.0.0"

[tool.ruff]
lint.ignore = ["B027", "B905", "C901", "E402", "E501", "E731"]
lint.select = ["B", "C", "E", "F", "W"]
extend-exclude = ["src/modules/sbstudio/vendor"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
