[project]
name = "skybrush-studio-for-blender"
version = "4.0.0"
description = "Skybrush Studio for Blender is a professional drone show designer framework integrated into Blender"
license = "GPL-3.0-or-later"
authors = [{ name = "CollMot Robotics Ltd.", email = "hello@skybrush.io" }]
maintainers = [
  { name = "Tamas Nepusz", email = "tamas@collmot.com" },
  { name = "Gabor Vasarhelyi", email = "vasarhelyi@collmot.com" },
]
homepage = "https://skybrush.io"
repository = "https://github.com/skybrush-io/studio-plugin-blender"
documentation = "https://doc.collmot.com/public/skybrush-plugin-blender/latest/"
package-mode = false
requires-python = ">=3.11"
dependencies = ["natsort>=8.0.0"]

[dependency-groups]
dev = ["pyclean>=2.0.0"]

[tool.ruff]
lint.ignore = ["B027", "B905", "C901", "E402", "E501", "E731"]
lint.select = ["B", "C", "E", "F", "W"]
extend-exclude = [
  "src/modules/sbstudio/vendor",
  "src/modules/sbstudio/i18n/translations.py",
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
